--- a/a-propos.html
+++ b/a-propos.html
@@ -9,7 +9,7 @@
 <body class="propos">
     <nav>
         <ul>
-            <li><a href="./acceuil.html"><img src="Image/Logo1.png" width="70px" /></a></li>
+            <li><a href="./index.html"><img src="Image/Logo1.png" width="70px" /></a></li>
             <li><a href="./robes.html">Robes</a></li>
             <li><a href="./souliers.html">Souliers</a></li>
             <li><a href="./chapeaux.html">Chapeaux</a></li>
