--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <nav>
         <ul>
-            <li><a href="#acceuil"><img src="Image/Logo1.png" width="70px" /></a></li>
+            <li><a href="#home"><img src="Image/Logo1.png" width="70px" /></a></li>
             <li><a href="./robes.html">Robes</a></li>
             <li><a href="./souliers.html">Souliers</a></li>
             <li><a href="./chapeaux.html">Chapeaux</a></li>
